fix: align attribute groups across the application
Attribute groups on the storages and oauth application admin pages looked different than on the work package pages. This
was introduced by https://community.openproject.org/projects/openproject/work_packages/47680/activity

To align them, this commit reduces the scope of the `wp-attribute-group` css, instead applying those styles to the more
general `attributes-group` block. It also fixes the HTML structure of the backend-rendered attribute groups to align
with those in the frontend.

Ref https://community.openproject.org/work_packages/48640/activity

--- a/frontend/src/global_styles/content/_attributes_key_value.sass
+++ b/frontend/src/global_styles/content/_attributes_key_value.sass
@@ -31,6 +31,12 @@
   // flex-wrap: wrap
   font-size: 0.875rem
   margin-bottom: 0.1875rem
+  flex-basis: 400px
+  flex-grow: 1
+  flex-shrink: 1
+  min-width: calc(50% - 3rem)
+  max-width: calc(100% - 3rem)
+  margin: 0 1.5rem
 
   &--key
     @extend .form--label
@@ -69,6 +75,7 @@
 
   &--value
     @include grid-visible-overflow
+    word-wrap: anywhere
 
   @at-root &.wp-attribute-group--attribute_span-all &--value-container
     flex-shrink: 0
